# klcom

./: .dockerignore  .eslintrc.yml  .gitignore  .mocharc.yml  .nycrc.yml  .prettierrc.yml  .rustfmt.toml  Cargo.toml  diesel.toml  package.json  tsconfig.json  webpack.config.ts
.github/: dependabot.yml
.github/workflows/: rust-audit.yml  rust.yml
assets/: app.tsx  routes.tsx
assets/@types/: prism.d.ts  remark-images.d.ts
assets/components/atoms/: accordion.tsx  accordionDetails.tsx  accordionSummary.tsx  alert.tsx  backdrop.tsx  chip.tsx  (+13 more)
assets/configs/: analyze.config.ts  assets.config.ts  babel.config.ts  define.config.ts  editor.config.ts  env.ts  html.config.ts  optimization.config.ts  style.config.ts  ts.config.ts
assets/constants/: fonts.ts  links.ts  mail_address.ts  routings.ts  siteName.ts
assets/hooks/: prism.ts
assets/providers/: queryProvider.tsx  themeProvider.tsx
assets/types/: changeLog.ts  entryof.ts  env.d.ts  forwardRef.ts  meta.ts  posts.ts  routes.ts
assets/utils/: object.ts
db/data/: user_roles.yml
src/: main.rs
src/configs/: cors.rs  identity.rs  json.rs  logger.rs  mod.rs  routes.rs
src/controllers/: files.rs  mod.rs
src/models/: change_logs.rs  mod.rs  post_tags.rs  posts.rs  tags.rs  user_roles.rs  users.rs
src/repositories/: change_logs.rs  connection.rs  mod.rs  posts.rs  schema.rs  tags.rs  user_roles.rs  users.rs
src/routes/: files.rs  mod.rs
src/services/: crypt.rs  errors.rs  identity.rs  mod.rs
src/tasks/: insert_admins.rs  mod.rs  upsert_user_roles.rs
src/views/: templates.rs
templates/: index.hbs
(+64 files in other folders)
