[package]
name = "klcom"
version = "0.1.0"
authors = ["KL-Lru <kilattoeruru@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.0"
actix-files = "0.5.0"
actix-http = "2.2.0"
actix-multipart = "0.3.0"
actix-web-actors = "3.0.0"
actix-web-codegen = "0.4.0"
actix-cors = "0.5.3"

actix-rt = "1.1.1"
actix-utils = "2.0.0"
actix-redis = "0.9.1"
actix-session = "0.4.0"
actix-identity = "0.3.1"

# for front
handlebars = { version = "3.5.0", features = ["dir_source"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"

# for DB
diesel = { version = "1.4.5", features = ["postgres",  "r2d2", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.6", features = ["serde"] }
bcrypt = "0.10"

# for logging
log = "0.4.11"
env_logger = "0.8.1"
derive_more = "0.99.11"